--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -1,35 +1,11 @@
 .logo-container {
-    z-index: 0;
-    height: 609px;
-    opacity: 0;
-    top: 0;
-    position: absolute;
-    right: 5%;
-    bottom: 0;
-    left: auto;
-    margin: auto;
+
+    float: right;
+    margin-right: 380px;
+    margin-top: 20px;
 
     svg {
-        width: 100%;
-        height: auto;
-        bottom: 0;
+        height: 500px;
+        width: 500px;
     }
-
-    .solid-logo {
-        position: absolute;
-        top: auto;
-        right: auto;
-        bottom: auto;
-        left: 0;
-        margin: auto;
-        width: 100%;
-        opacity: 0;
-        transform: rotateZ(30deg) !important;
-        z-index: 1;
-    }
-}
-
-.svg-container {
-    stroke: #fff;
-    stroke-width: 10;
 }
