--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -3,9 +3,11 @@
     float: right;
     margin-right: 380px;
     margin-top: 20px;
+    background: blue;
 
     svg {
         height: 500px;
         width: 500px;
+        background: red;
     }
 }
